--- a/src/main/style/Main.module.scss
+++ b/src/main/style/Main.module.scss
@@ -6,18 +6,39 @@
   top: 0;
   left: 0;
   border-bottom: 1px solid $accent-dark;
-  background-color: $background;
+  background-color: #17001C55;
+  backdrop-filter: blur(10px);
   z-index: 1000;
 
   .content {
     padding: 1.5rem 10rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 
-    .phone {
-      font-size: 1.3rem;
-      color: $accent-2;
-      font-weight: bold;
+    .navItem {
+      position: relative;
+      margin: 0 1rem;
+      font-size: 1.2rem;
+      color: $text-color;
+      opacity: 0.6;
+      cursor: pointer;
+      transition: 0.2s ease-in-out all;
+      display: flex;
+      align-items: center;
+      line-height: 0;
+
+      svg {
+        margin-right: 0.5rem;
+      }
+
+      &:hover {
+        opacity: 0.8;
+      }
+
+      &.active {
+        color: $accent-2;
+        opacity: 1;
+      }
     }
   }
 }
