--- a/src/style/App.module.scss
+++ b/src/style/App.module.scss
@@ -18,9 +18,19 @@
 
 .stageContainer {
   padding-top: 10em;
+  top: -150%;
   height: 100vh;
   width: 100%;
   position: fixed;
   box-sizing: border-box;
-  transition: 0.4s ease-in-out top, 0.4s ease-in-out transform, 0.4s ease-in-out opacity;
+  transition: 0.4s ease-in-out transform, 0.4s ease-in-out opacity;
+}
+
+.h1 {
+  font-size: 3em;
+  margin: 0;
+  padding: 0;
+  color: $accent-1;
+  font-weight: 700;
+  text-shadow: 0 0 0.5em $accent-2;
 }
