--- a/src/main/techstack/TechStack.module.scss
+++ b/src/main/techstack/TechStack.module.scss
@@ -1,12 +1,28 @@
 @import "../../style/globals.module";
 @import "../../style/App.module";
 
+@media screen and (max-width: 768px) {
+  .container {
+    font-size: 14px !important;
+    top: 6em;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    font-size: 1rem;
+  }
+}
+
 .container {
+  position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   text-align: center;
+  gap: 4em;
+  transition: all 0.2s ease-in-out;
 
   h2 {
     @extend .h1;
@@ -19,9 +35,9 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    padding: 0.5rem 1rem;
-    margin-top: 2.5rem;
-    font-size: 1.5rem;
+    padding: 0.5em 1em;
+    margin-top: 2em;
+    font-size: 1.5em;
 
     .name {
       display: flex;
@@ -30,16 +46,16 @@
     }
 
     svg {
-      margin-right: 0.5rem;
+      margin-right: 0.5em;
       width: 1.5em;
       height: 1.5em;
     }
 
     .level {
       display: flex;
-      gap: 0.4rem;
+      gap: 5px;
       justify-content: center;
-      margin-top: 0.8rem;
+      margin-top: 0.8em;
 
       .levelDot {
         width: 1em;
