--- a/src/main/techstack/TechStack.module.scss
+++ b/src/main/techstack/TechStack.module.scss
@@ -8,6 +8,13 @@
   }
 }
 
+@media screen and (max-width: 375px) {
+  .container {
+    font-size: 10px !important;
+    top: 6em;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .container {
     font-size: 1rem;
@@ -36,8 +43,8 @@
     flex-direction: column;
     align-content: center;
     padding: 0.5em 1em;
-    margin-top: 2em;
-    font-size: 1.5em;
+    margin-top: 1.2em;
+    font-size: 1.6em;
 
     .name {
       display: flex;
@@ -58,10 +65,10 @@
       margin-top: 0.8em;
 
       .levelDot {
-        width: 1em;
-        height: 1em;
+        width: 0.9em;
+        height: 0.9em;
         border-radius: 50%;
-          border: 2px solid $accent-2;
+        border: 2px solid $accent-2;
         transition: 0.4s ease-in-out background-color;
 
         &.active {
